# container-backups

./: .dockerignore  .gitignore  Dockerfile.mysql-backup  Dockerfile.postgresql-backup  Makefile  README.md  entrypoint-mysql-backup.sh  entrypoint-postgresql-backup.sh  mise.toml  mysql-backup.sh  postgresql-backup.sh  pyproject.toml  s3_backup.py
.github/workflows/: build_container_mysql.yml  build_container_postgresql.yml
container_backups/: s3_backup.py
tests/: test_s3-backup.py
