
[project]
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.10"
dependencies = ["boto3<2.0.0,>=1.37.27", "pydantic-settings<3.0.0,>=2.8.1"]
name = "container-backups"
version = "0.2.0"
description = ""
readme = "README.md"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
s3_backup = "container_backups.s3_backup:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.3",
    "pytest>=8.3.5",
    "testcontainers[minio]>=4.10",
    # "minio>=7.2.15",
    "types-boto3>=1.37.27",
]
